[gd_scene load_steps=21 format=3 uid="uid://cj3ob1sgk7538"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_eat76"]
[ext_resource type="FontFile" uid="uid://b2xb8ywfc7ndp" path="res://assets/MinimalPixelFont.ttf" id="1_vgr32"]
[ext_resource type="Texture2D" uid="uid://jge2fyus3veg" path="res://assets/ui/Play.png" id="2_maksw"]
[ext_resource type="Texture2D" uid="uid://dbdrk6k0m3cj4" path="res://assets/ui/Help.png" id="3_u64xa"]
[ext_resource type="Script" path="res://scripts/food_spawner.gd" id="5_maw4c"]
[ext_resource type="PackedScene" uid="uid://cwueybgvt4eq7" path="res://scenes/food.tscn" id="6_lvsgw"]
[ext_resource type="PackedScene" uid="uid://b7seeawya17l0" path="res://scenes/food2.tscn" id="7_58pow"]
[ext_resource type="PackedScene" uid="uid://cqb7wkq53mug2" path="res://scenes/food3.tscn" id="8_xbu3p"]
[ext_resource type="PackedScene" uid="uid://42mi6d5xp85u" path="res://scenes/bad_food_scene.tscn" id="9_sou58"]
[ext_resource type="Texture2D" uid="uid://egtv1fn8mbyc" path="res://assets/new_assets/background.png" id="10_2i8hl"]
[ext_resource type="Texture2D" uid="uid://dtsebympof1ya" path="res://new_background.jpg" id="10_s2ajo"]

[sub_resource type="LabelSettings" id="LabelSettings_4vo0y"]
font = ExtResource("1_vgr32")
font_size = 250

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fss2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_787se"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ott2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6t5d8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0v8ri"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce8cl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk3g3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbsmo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eat76")

[node name="Control" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -390.5
offset_top = -95.5
offset_right = 390.5
offset_bottom = 95.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Blossom Buffet"
label_settings = SubResource("LabelSettings_4vo0y")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 33
alignment = 1

[node name="PlayButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_fss2f")
theme_override_styles/hover = SubResource("StyleBoxFlat_787se")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5ott2")
theme_override_styles/normal = SubResource("StyleBoxFlat_6t5d8")
icon = ExtResource("2_maksw")
flat = true

[node name="TutorialButton" type="Button" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = SubResource("StyleBoxEmpty_0v8ri")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce8cl")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_nk3g3")
theme_override_styles/normal = SubResource("StyleBoxFlat_lbsmo")
icon = ExtResource("3_u64xa")
flat = true

[node name="Tutorial" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="FoodSpawner" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
script = ExtResource("5_maw4c")
good_food_scenes = Array[PackedScene]([ExtResource("6_lvsgw"), ExtResource("7_58pow"), ExtResource("8_xbu3p")])
bad_food_scene = ExtResource("9_sou58")
spawn_rate = 1.0

[node name="SpawnTimer" type="Timer" parent="FoodSpawner"]
wait_time = 0.9

[node name="NewBackground" type="Sprite2D" parent="."]
visible = false
position = Vector2(601, 335)
texture = ExtResource("10_s2ajo")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(567, 315)
scale = Vector2(0.78, 0.78)
texture = ExtResource("10_2i8hl")

[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
